argocd/argocd-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  # namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        # - argocd.local.dev
        - 'argocd.hayden.com'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
