argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  # namespace: argocd
spec:
  gateways:
    - argocd-gateway
  hosts:
    # - 'argocd.local.dev'
    # - 'localhost'
    - 'argocd.hayden.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
